--- a/angela.html
+++ b/angela.html
@@ -6,9 +6,33 @@
     <title>Practica2</title>
 </head>
 <body>
-    <h1>Paredes ecologicas</h1>
-    <h2>Hola</h2>
-    <br>
-    hola
+    <h1><center>Paredes ecologicas</center></h1>
+    <a href="https://www.vertinvertical.com/Muros-Verdes-Bogota-Colombia.php"></a>
+    <h2>¿Qué son las paredes sostenibles?</h2>
+    <p>Las paredes sostenibles se refieren al uso de materiales y técnicas que minimizan 
+        el impacto ambiental durante su producción, uso y disposición.
+        Estos materiales son respetuosos con el entorno y también contribuyen a la creación de 
+        espacios interiores más saludables y confortables.</p>
+        <ul>
+            <li>¿Qué son los jardines Verticales?</li>
+            <p>Son sistemas que permiten colocar vegetación sobre las paredes y utilizan un sistema de riego automatizado.
+              Están hechas de diferentes componentes e incluso existen agencias que utilizan materiales reciclados, dándole una 
+              segunda oportunidad a una basura que tardaría años en biodegradarse.</p>
+            <li>Paisajismo</li>
+            <p>Los servicios ambientales que ofrece la infrastructura verde puede
+                aprovecharse en cualquier escala. Sin importar el espacio es un patio pequeño, una 
+                terraza o un gran area. </p>
+        </ul>
+    <table>
+        <tr>
+            <th>Mantenimiento</th>
+            <th>Consultoria y Diseño</th>
+        </tr>
+        <tr>
+            <td>Renovación de plantas</td>
+            <td>Propuesta de diseño</td>
+        </tr>
+    </table>
 </body>
+<img src="./img/cascada.avif" alt="Conectando">
 </html>
