--- a/Ejercicio5.html
+++ b/Ejercicio5.html
@@ -1,11 +1,47 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>teno</title>
+    <title>La Revolución de la Tecnología</title>
+    <link rel="stylesheet" href="Ejercicio5.css">
 </head>
 <body>
-    
+    <header>
+        <h1>La Revolución de la Tecnología</h1>
+        <nav>
+            <ul>
+                <li><a href="#introduccion">Introducción</a></li>
+                <li><a href="#tecnologia-avanzada">Avances</a></li>
+                <li><a href="#conclusion">Conclusión</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main class="content">
+        <section id="introduccion">
+            <h2>Introducción</h2>
+            <p>La tecnología ha transformado nuestra vida cotidiana y nuestro mundo de formas sorprendentes.</p>
+            <p>Desde la inteligencia artificial hasta los dispositivos portátiles, los avances tecnológicos no tienen límites.</p>
+        </section>
+        <section id="tecnologia-avanzada">
+            <h2>Avances en Tecnología</h2>
+            <p>Algunos de los avances más destacados incluyen:</p>
+            <ul>
+                <li>Inteligencia Artificial</li>
+                <li>Blockchain</li>
+                <li>Realidad Virtual y Aumentada</li>
+                <li>Internet de las Cosas (IoT)</li>
+            </ul>
+            <a href="#conclusion" class="btn">Leer más</a>
+        </section>
+        <section id="conclusion">
+            <h2>Conclusión</h2>
+            <p>La tecnología sigue evolucionando a un ritmo vertiginoso, impactando positivamente todos los aspectos de nuestras vidas.</p>
+            <p><a href="https://www.tecnologia.com">Descubre más sobre el futuro de la tecnología aquí.</a></p>
+        </section>
+    </main>
+    <footer>
+        <p>&copy; 2024 Tecnología Avanzada | <a href="#introduccion">Inicio</a></p>
+    </footer>
 </body>
 </html>
