--- a/Ejercicio5.html
+++ b/Ejercicio5.html
@@ -11,33 +11,34 @@
         <h1>La Revolución de la Tecnología</h1>
         <nav>
             <ul>
-                <li><a href="#introduccion">Introducción</a></li>
-                <li><a href="#tecnologia-avanzada">Avances</a></li>
-                <li><a href="#conclusion">Conclusión</a></li>
+                <center><a href="#introduccion">Introducción</a></li></center>
+                <center><a href="#tecnologia-avanzada">Avances</a></li></center>
+                <center><a href="#conclusion">Conclusión</a></li></center>
             </ul>
         </nav>
     </header>
     <main class="content">
         <section id="introduccion">
-            <h2>Introducción</h2>
-            <p>La tecnología ha transformado nuestra vida cotidiana y nuestro mundo de formas sorprendentes.</p>
-            <p>Desde la inteligencia artificial hasta los dispositivos portátiles, los avances tecnológicos no tienen límites.</p>
+            <center><h2>Introducción</h2></center>
+            <center><p>La tecnología ha transformado nuestra vida cotidiana y nuestro mundo de formas sorprendentes.</p></center>
+            <center><p>La tecnología ha transformado nuestra vida cotidiana y nuestro mundo de formas sorprendentes.</p></center>
+            <center><p>Desde la inteligencia artificial hasta los dispositivos portátiles, los avances tecnológicos no tienen límites.</p></center>
         </section>
         <section id="tecnologia-avanzada">
-            <h2>Avances en Tecnología</h2>
-            <p>Algunos de los avances más destacados incluyen:</p>
-            <ul>
-                <li>Inteligencia Artificial</li>
-                <li>Blockchain</li>
-                <li>Realidad Virtual y Aumentada</li>
-                <li>Internet de las Cosas (IoT)</li>
-            </ul>
-            <a href="#conclusion" class="btn">Leer más</a>
+           <center><h2>Avances en Tecnología</h2></center>
+           <center> <p>Algunos de los avances más destacados incluyen:</p></center>
+            <center><ul>
+              <center>Inteligencia Artificial</center>
+              <center> Blockchain</center>
+              <center>Realidad Virtual y Aumentada</center>
+              <center>Internet de las Cosas (IoT)</center>
+            </center></ul>
+           <center> <a href="#conclusion" class="btn">Leer más</a> </center>
         </section>
         <section id="conclusion">
-            <h2>Conclusión</h2>
-            <p>La tecnología sigue evolucionando a un ritmo vertiginoso, impactando positivamente todos los aspectos de nuestras vidas.</p>
-            <p><a href="https://www.tecnologia.com">Descubre más sobre el futuro de la tecnología aquí.</a></p>
+           <center><h2>Conclusión</h2></center>
+           <center><p>La tecnología sigue evolucionando a un ritmo vertiginoso, impactando positivamente todos los aspectos de nuestras vidas.</p></center>
+            <center><p><a href="https://www.tecnologia.com">Descubre más sobre el futuro de la tecnología aquí.</a></p></center>
         </section>
     </main>
     <footer>
