--- a/Ejercicio5.html
+++ b/Ejercicio5.html
@@ -21,7 +21,7 @@
         <section id="introduccion">
             <center><h2>Introducción</h2></center>
             <center><p>La tecnología ha transformado nuestra vida cotidiana y nuestro mundo de formas sorprendentes.</p></center>
-            <center><p>La tecnología ha transformado nuestra vida cotidiana y nuestro mundo de formas sorprendentes.</p></center>
+            <center><p>proceso o capacidad de transformar o combinar algo ya existente para construir algo nuevo o bien darle otra función.</p></center>
             <center><p>Desde la inteligencia artificial hasta los dispositivos portátiles, los avances tecnológicos no tienen límites.</p></center>
         </section>
         <section id="tecnologia-avanzada">
