--- a/practica8.html
+++ b/practica8.html
@@ -9,24 +9,29 @@
 </head>
 
 <body>
-    <div class="contenedor"> 
-        <div class="header"><h1>Vertin</h1></div>
-        <img src="./img/ima1.jpg" class="contenedor">
+    <div class="header">
+        <h1>
+            <center>Vertin</center>
+            <img src="./img/ima1.jpg" class="contenedor">
+        </h1>
     </div>
     <div class="grid-1">
         <div class="sidebar">
-            <div class="caja1">1. Menu </div>
-            <div class="caja2">2. Mas Opciones</div>
+            <div class="content">
+                <h2 class="titulo">¿Qué son los muros verdes?</h2>
+                <p>
+                    <center>los muros verdes están ganando mucha importancia gracias a su valor
+                        estético y al impacto positivo que ejercen las plantas sobre el medio ambiente.
+                        El verde de las plantas tiene un gran efecto en el ánimo de las personas, además
+                        de ser bueno para la naturaleza.</center>
+                </p>
+            </div>
         </div>
-        <div class="content">
-            <h2>¿Qué son los muros verdes?</h2>
-            <p><center>los muros verdes están ganando mucha importancia gracias a su valor 
-                estético y al impacto positivo que ejercen las plantas sobre el medio ambiente.
-                El verde de las plantas tiene un gran efecto en el ánimo de las personas, además
-                 de ser bueno para la naturaleza.</center></p>
-        </div>
-        <div class="footer">4</div>
+        <div class="contenedor"></div>
+        <div class="caja1">1. Menu </div>
+        <div class="caja2">2. Mas Opciones</div>
         <div class="caja3">3. Otros</div>
+    </div>
     </div>
 </body>
 
