--- a/ejercicio10.html
+++ b/ejercicio10.html
@@ -7,7 +7,7 @@
     
 </head>
 <body>
-    <div id="counter">0</div>
+    <div id="contador">0</div>
     <button onclick="decreaseCounter()">-</button>
     <button onclick="increaseCounter()">+</button>
 
