--- a/ejercicio6.html
+++ b/ejercicio6.html
@@ -7,10 +7,14 @@
     <link rel="stylesheet" href="style6.css">
 </head>
 <body>
-    <h1>Título Principal</h1>
-    <p class="descripcion">Descripción del contenido con estilos aplicados.</p>
+    <h1>Estilos CSS</h1>
+    <p class="descripcion">text-align, 
+        font-size, color
+        margin-bottom.</p>
     <div class="caja">
-        <p>Texto dentro de una caja con borde.</p>
+        <p>background-color, border, padding, border-radius,
+            box-shadow, max-width,
+            margin.</p>
     </div>
 </body>
 </html>
